--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^1.0.6",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
