--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.8",
+    "@fontsource/rubik": "^5.0.18",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
     "bcrypt": "^5.1.1",
