POST the data to db from cart for order details added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/rubik": "^5.0.18",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.16.16",
     "mongodb": "^6.3.0",
